Fixed a bug with the header
The header was not aligned with the rest of the content on the webpage. Now it is.

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
+    box-sizing: border-box;
 }
 
 .header,
@@ -26,6 +27,10 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #1f2937;
+}
+
+.header .imiddle {
+    width: 877px;
 }
 
 .header .ileft, .header .iright {
